@@ -2,7 +2,7 @@
 //
 // Title:       Force Field X.
 // Description: Force Field X - Software for Molecular Biophysics.
-// Copyright:   Copyright (c) Michael J. Schnieders 2001-2023.
+// Copyright:   Copyright (c) Michael J. Schnieders 2001-2024.
 //
 // This file is part of Force Field X.
 //
@@ -112,7 +112,7 @@ public class FFXLocale {
    * @return a boolean.
    */
   public boolean setLocale(String language, String country) {
-    Locale locale = new Locale(language, country);
+    Locale locale = Locale.of(language, country);
     try {
       ffxLabels =
           (PropertyResourceBundle)
